Add files via upload
1.21.10 버전으로 업뎃
단일 모드 설치 -> 모드팩 설치 방식으로 변경
Java 25로 올려서 JVM Flag 살짝 수정